Project Transportation_Data_Warehouse {
  database_type: "SQL Server"
}

Table DimDate {
  DateKey int [pk]
  FullDate date

  DayLongName varchar
  DayShortName varchar

  MonthLongName varchar
  MonthShortName varchar

  CalendarDay int
  CalendarDayInWeek int

  CalendarWeek int
  CalendarWeekStartDateId int
  CalendarWeekEndDateId int

  CalendarMonth int
  CalendarMonthStartDateId int
  CalendarMonthEndDateId int
  CalendarNumberOfDaysInMonth int
  CalendarDayInMonth int

  CalendarQuarter int
  CalendarQuarterStartDateId int
  CalendarQuarterEndDateId int
  CalendarNumberOfDaysInQuarter int
  CalendarDayInQuarter int

  CalendarYear int
  CalendarYearStartDateId int
  CalendarYearEndDateId int
  CalendarNumberOfDaysInYear int
}

Table DimAgency {
  AgencyKey int [pk]

  NTD_ID varchar
  LegacyNTD_ID varchar

  AgencyName varchar
  OrganizationType varchar

  City varchar
  State varchar
  Region int

  // Agency-reported service footprint (sourced from NTD agency info file)
  ServiceAreaSqMiles decimal
  ServiceAreaPopulation int

  EffectiveDate date
  ExpirationDate date
  CurrentFlag boolean
}

Table DimMode {
  ModeKey int [pk]

  ModeCode varchar
  ModeName varchar
}

Table DimServiceType {
  ServiceTypeKey int [pk]

  TOSCode varchar
  ServiceTypeName varchar
  ServiceCategory varchar
}

Table DimUrbanArea {
  UrbanAreaKey int [pk]

  UACECode varchar
  UZAName varchar

  // Census-defined geographic attributes only
  UZASqMiles decimal
  UZAPopulation int
  UZADensity decimal

  EffectiveDate date
  ExpirationDate date
  CurrentFlag boolean
}

Table DimSafetyEventType {
  SafetyEventTypeKey int [pk]

  EventCategory varchar
  EventType varchar
  EventSubType varchar
  SeverityLevel varchar
}

Table DimSafetyIncident {
  SafetyIncidentKey int [pk]

  SourceEventID varchar
  EventDescription varchar
}

Table Fact_Annual_Service_Performance {
  AnnualServicePerformanceKey bigint [pk]

  DateKey int [not null]
  AgencyKey int [not null]
  ModeKey int [not null, default: -1]
  ServiceTypeKey int [not null, default: -1]
  UrbanAreaKey int [not null, default: -1]

  UPT bigint
  PMT bigint

  VRM bigint
  VRH bigint
  VOMS int
  DRM bigint

  Fares decimal

  OperatingExpenseTotal decimal

  // ETL audit columns
  ETL_InsertDate datetime [not null]
  ETL_UpdateDate datetime
  ETL_BatchID int
  RecordSourceSystem varchar(50)
}

Table Fact_Major_Safety_Event {
  MajorSafetyEventKey bigint [pk]

  EventDateKey int [not null]
  AgencyKey int [not null]

  ModeKey int [not null, default: -1]
  ServiceTypeKey int [not null, default: -1]
  UrbanAreaKey int [not null, default: -1]

  SafetyEventTypeKey int [not null]
  SafetyIncidentDescriptionKey int

  // Degenerate dimensions: natural key and event time
  SourceIncidentID varchar(50)
  EventTime time

  PassengerFatalityCount int
  EmployeeFatalityCount int
  OtherFatalityCount int
  TotalFatalityCount int  // Stored from source, not computed

  PassengerInjuryCount int
  EmployeeInjuryCount int
  OtherInjuryCount int
  TotalInjuryCount int    // Stored from source, not computed

  VehicleInvolvedCount int
  EvacuationCount int

  PropertyDamageAmount decimal

  // ETL audit columns
  ETL_InsertDate datetime [not null]
  ETL_UpdateDate datetime
  ETL_BatchID int
  RecordSourceSystem varchar(50)
}

Table Fact_Service_Availability {
  ServiceAvailabilityKey bigint [pk]

  AgencyKey int [not null]
  ModeKey int [not null]
  ServiceTypeKey int [not null]

  // Role-playing dimensions (references to DimDate)
  // Service lifecycle milestones: Commitment → Start → End
  CommitmentDateKey int             // When service was committed/planned
  StartDateKey int [not null]       // When service actually started
  EndDateKey int [not null]         // When service ended (or max date if ongoing)

  // Stored from source (not computed from today's date)
  // Values: 'Active Service', 'Ending Service'
  ServiceActiveFlag boolean

  // ETL audit columns
  ETL_InsertDate datetime [not null]
  ETL_UpdateDate datetime
  ETL_BatchID int
  RecordSourceSystem varchar(50)
}

Table Fact_Service_Lifecycle_Accumulating {
  ServiceLifecycleKey bigint [pk]

  AgencyKey int [not null]
  ModeKey int [not null]
  ServiceTypeKey int [not null]

  UrbanAreaKey int

  // Bridge foreign keys for drill-down to annual data
  FirstObservedDateKey int
  PeakPerformanceDateKey int
  LatestObservedDateKey int
  EndServiceDateKey int

  YearsInService int

  PeakAnnualUPT bigint
  PeakAnnualVRM bigint
  PeakAnnualVRH bigint
  PeakAnnualVOMS int

  LatestAnnualUPT bigint
  LatestAnnualVRM bigint
  LatestAnnualVRH bigint
  LatestAnnualVOMS int

  TotalObservedUPT bigint
  TotalObservedVRM bigint
  TotalObservedVRH bigint

  TotalObservedMajorSafetyEvents int
  TotalObservedFatalities int
  TotalObservedInjuries int

  LifecycleCompleteFlag boolean

  // ETL audit columns (critical for accumulating snapshots)
  ETL_InsertDate datetime [not null]
  ETL_UpdateDate datetime
  ETL_BatchID int
  RecordSourceSystem varchar(50)
}

Ref: Fact_Annual_Service_Performance.DateKey > DimDate.DateKey
Ref: Fact_Annual_Service_Performance.AgencyKey > DimAgency.AgencyKey
Ref: Fact_Annual_Service_Performance.ModeKey > DimMode.ModeKey
Ref: Fact_Annual_Service_Performance.ServiceTypeKey > DimServiceType.ServiceTypeKey
Ref: Fact_Annual_Service_Performance.UrbanAreaKey > DimUrbanArea.UrbanAreaKey

Ref: Fact_Major_Safety_Event.EventDateKey > DimDate.DateKey
Ref: Fact_Major_Safety_Event.AgencyKey > DimAgency.AgencyKey
Ref: Fact_Major_Safety_Event.ModeKey > DimMode.ModeKey
Ref: Fact_Major_Safety_Event.ServiceTypeKey > DimServiceType.ServiceTypeKey
Ref: Fact_Major_Safety_Event.UrbanAreaKey > DimUrbanArea.UrbanAreaKey
Ref: Fact_Major_Safety_Event.SafetyEventTypeKey > DimSafetyEventType.SafetyEventTypeKey
Ref: Fact_Major_Safety_Event.SafetyIncidentDescriptionKey > DimSafetyIncident.SafetyIncidentKey

Ref: Fact_Service_Availability.AgencyKey > DimAgency.AgencyKey
Ref: Fact_Service_Availability.ModeKey > DimMode.ModeKey
Ref: Fact_Service_Availability.ServiceTypeKey > DimServiceType.ServiceTypeKey
Ref: Fact_Service_Availability.CommitmentDateKey > DimDate.DateKey
Ref: Fact_Service_Availability.StartDateKey > DimDate.DateKey
Ref: Fact_Service_Availability.EndDateKey > DimDate.DateKey

Ref: Fact_Service_Lifecycle_Accumulating.AgencyKey > DimAgency.AgencyKey
Ref: Fact_Service_Lifecycle_Accumulating.ModeKey > DimMode.ModeKey
Ref: Fact_Service_Lifecycle_Accumulating.ServiceTypeKey > DimServiceType.ServiceTypeKey
Ref: Fact_Service_Lifecycle_Accumulating.UrbanAreaKey > DimUrbanArea.UrbanAreaKey

Ref: Fact_Service_Lifecycle_Accumulating.FirstObservedDateKey > DimDate.DateKey
Ref: Fact_Service_Lifecycle_Accumulating.PeakPerformanceDateKey > DimDate.DateKey
Ref: Fact_Service_Lifecycle_Accumulating.LatestObservedDateKey > DimDate.DateKey
Ref: Fact_Service_Lifecycle_Accumulating.EndServiceDateKey > DimDate.DateKey
